# simplify-algorithm

./: README.md
.github/workflows/: test-cpp.yml  test-csharp.yml  test-dart.yml  test-fsharp.yml  test-go.yml  test-haskell.yml  test-rust.yml  test-scala.yml
cpp/: meson.build
cpp/include/: meson.build  points.hpp  simplify_algorithm.hpp
cpp/src/: algorithms.cpp  algorithms.hpp  meson.build  points.cpp  simplify_algorithm.cpp
cpp/tests/: meson.build  simplify_algorithm_test.cpp
csharp/: Simplify.CSharp.sln
csharp/Simplify.CSharp/: AssemblyInfo.cs  IPoint.cs  Point2d.cs  Point3d.cs  Simplify.CSharp.csproj  Simplify.cs
csharp/Simplify.CSharp.Test/: Simplify.CSharp.Test.csproj  Simplify.Test.cs  TestData.cs
dart/: pubspec.yaml
dart/lib/: simplify.dart
dart/lib/src/: algorithms.dart  points.dart  simplify.dart
dart/test/: simplify_test.dart  test_data.dart
fsharp/: Simplify.FSharp.sln
fsharp/Simplify.FSharp/: AssemblyInfo.fs  Simplify.FSharp.fsproj  Simplify.fs
fsharp/Simplify.FSharp.Test/: Simplify.FSharp.Test.fsproj  Simplify.Tests.fs  TestData.fs
go/: go.mod
go/pkg/simplify/: points.go  simplify.go  simplify_test.go  testdata_test.go
haskell/: simplify.cabal
haskell/src/: Simplify.hs
haskell/src/Impl/: Simplify.hs
haskell/test/: SimplifySpec.hs  TestData.hs
java/: pom.xml
java/src/main/java/dev/cbue/simplify/: Simplify.java
java/src/main/java/dev/cbue/simplify/models/: Coordinates.java  Point.java  Point2d.java  Point3d.java
java/src/test/java/dev/cbue/simplify/: SimplifyTest.java
java/src/test/java/dev/cbue/simplify/testData/: AlgorithmicSimplification.java  PointDistance.java  SegmentDistance.java  Simplification.java  TestData.java
rust/: Cargo.toml
rust/src/: algorithms.rs  lib.rs  point.rs
rust/tests/: simplify_tests.rs
scala/: .gitignore  build.sbt
scala/src/main/scala/: Simplify.scala
scala/src/test/scala/: SimplifyTest.scala
test-data/: algorithm-simplifications.json  douglas-peucker-simplifications.json  point-distances.json  points.json  radial-simplifications.json  segment-distances.json
